--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.1.1
 asgiref==3.6.0
+async-timeout==4.0.2
 billiard==3.6.4.0
 black==23.1.0
 cached-property==1.5.2
@@ -21,9 +22,8 @@ django-rest-framework==0.1.0
 django-rest-knox==4.2.0
 django-six==1.0.5
 djangorestframework==3.14.0
-djangorestframework-jwt==1.11.0
 idna==3.4
-importlib-metadata==6.0.0
+importlib-metadata==4.13.0
 kombu==5.2.4
 mypy-extensions==1.0.0
 packaging==23.0
@@ -31,9 +31,9 @@ pathspec==0.11.0
 platformdirs==3.0.0
 prompt-toolkit==3.0.38
 pycparser==2.21
-PyJWT==1.7.1
 python-dotenv==0.21.1
 pytz==2022.7.1
+redis==4.5.1
 requests==2.28.2
 screen==1.0.1
 six==1.16.0
@@ -47,3 +47,4 @@ vine==5.0.0
 wcwidth==0.2.6
 xlwt==1.3.0
 zipp==3.15.0
+gunicorn==20.1.0
