--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,7 @@ platformdirs==3.0.0
 prompt-toolkit==3.0.38
 pycparser==2.21
 python-dotenv==0.21.1
+psycopg2==2.9.5
 pytz==2022.7.1
 redis==4.5.1
 requests==2.28.2
